[project]
name = "bluetriangle-cli-reporter"
version = "1.0.0"
description = "CLI tool for Blue Triangle API performance and revenue analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "requests",
    "matplotlib",
    "python-dotenv",
]

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
progress = [
    "tqdm>=4.60.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
bt-insights = "bt_insights:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
